REOPENED 230689
[css-position-sticky] scrollIntoView should not take into account sticky positioning offsets
https://bugs.webkit.org/show_bug.cgi?id=230689
Summary [css-position-sticky] scrollIntoView should not take into account sticky posi...
Martin Robinson
Reported 2021-09-23 06:57:22 PDT
https://www.w3.org/TR/css-position-3/#stickypos-scroll reads: For the purposes of any operation targetting the scroll position of a sticky positioned element (or one of its descendants), the sticky positioned element must be considered to be positioned at its initial (non-offsetted) position. This means that scrollIntoView should not take into account sticky positioning offsets when choosing a rectangle to scroll to.
Attachments
Patch (5.87 KB, patch)
2021-09-27 01:51 PDT, Martin Robinson
no flags
Patch (7.24 KB, patch)
2021-09-28 05:30 PDT, Martin Robinson
no flags
Martin Robinson
Comment 1 2021-09-27 01:51:00 PDT
Martin Robinson
Comment 2 2021-09-28 05:30:35 PDT
Radar WebKit Bug Importer
Comment 3 2021-09-30 06:58:16 PDT
EWS
Comment 4 2021-10-05 05:10:08 PDT
Committed r283546 (242511@main): <https://commits.webkit.org/242511@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 439461 [details].
WebKit Commit Bot
Comment 5 2022-01-04 07:47:35 PST
Re-opened since this is blocked by bug 234844
Note You need to log in before you can comment on or make changes to this bug.