[css-position-sticky] scrollIntoView should not take into account sticky positioning offsets https://bugs.webkit.org/show_bug.cgi?id=230689

Reviewed by Simon Fraser.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-position/sticky/position-sticky-scrollIntoView-expected.txt: Update results to show newly
passing test.

Source/WebCore:

When calculating the location for absolute anchors rectangles,
do not take into account sticky offsets. This means that when
scrolling to elements that are stickily positioned, their static
positions will be targeted.

No new tests. This is covered by an existing WPT test.

* rendering/RenderElement.cpp:
(WebCore::RenderElement::getLeadingCorner const): Do not take into account sticky position when calculating this point.
(WebCore::RenderElement::getTrailingCorner const): Ditto.

LayoutTests:

* platform/ios-wk2/imported/w3c/web-platform-tests/css/css-position/sticky/position-sticky-scrollIntoView-expected.txt: Removed.


Canonical link: https://commits.webkit.org/242511@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283546 268f45cc-cd09-0410-ab3c-d52691b4dbfc